Fix z-indexes

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ Navigation Styles
 nav {
 	width:100%;
 	position: fixed;
-	z-index: 1000;
+	z-index: 10000;
 	background-color: white;
 	height:40px;
 	top:0;
@@ -109,6 +109,7 @@ footer ul li {
 	position: relative;
 	top:-40px;
 	padding-left: 80px;
+	z-index: 10000;
 }
 
 footer img {
@@ -187,7 +188,7 @@ Artist Home Section Styles
 	background-size:cover;
 	height:680px;
 	margin:750px -10px 0 -10px;
-	z-index: 5000px;
+	z-index: 5000;
 	position: relative;
 	border-bottom:8px solid white;
 	width:100%;
@@ -275,12 +276,12 @@ Artist Home Section Styles
 Social Media Home Section Styles
 ------------------------------------------
 */
-section.socialMedia {
+section.social {
 	background:#000;
 	position: relative;
 	margin:0 -10px;
 	height: 400px;
-	z-index: 5000px;
+	z-index: 5000;
 	border-bottom: 8px solid white;
 }
 
@@ -391,7 +392,7 @@ section.about {
 	position: relative;
 	margin:0 -10px;
 	height: 300px;
-	z-index: 5000px;
+	z-index: 5000;
 	margin-bottom: 8px solid white;
 }
 
